--- a/src/app/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/lista-usuarios/lista-usuarios.component.html
@@ -30,11 +30,11 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> Ações </th>
         <td mat-cell *matCellDef="let element">
             <div>
-                <button mat-button>Edit</button>
-                <button mat-button>Remove</button>
+                <button mat-button>Editar</button>
+                <button mat-button>Remover</button>
             </div>
         </td>
     </ng-container>
