--- a/src/app/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/lista-usuarios/lista-usuarios.component.html
@@ -34,7 +34,7 @@
         <td mat-cell *matCellDef="let element">
             <div>
                 <button mat-button>Editar</button>
-                <button mat-button>Remover</button>
+                <button mat-button (click)="removerUsuario(element.id)">Remover</button>
             </div>
         </td>
     </ng-container>
