--- a/src/app/components/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/components/lista-usuarios/lista-usuarios.component.html
@@ -33,7 +33,7 @@
         <th mat-header-cell *matHeaderCellDef> Ações </th>
         <td mat-cell *matCellDef="let element">
             <div>
-                <button mat-button>Editar</button>
+                <button mat-button (click)="editarUsuario(element)">Editar</button>
                 <button mat-button (click)="removerUsuario(element.id)">Remover</button>
             </div>
         </td>
